Version 3.12
* BUGFIX: Removed internal http pipeline feature.
* BUGFIX: The example of KSI_DataHash_create in tutorial/t1_signing.md was missing an argument.

2017-02-27 release(3.12.2000)
* IMPROVEMENT: Support for adding doxygen generated html files into rpm and debian package.
* IMPROVEMENT: Added flag --with-default-pdu-version=version to configure script.
* IMPROVEMENT: Improve test support for different PDU version.
* BUGFIX: Fixed KSI_TlvElement nested structure serialization issue.
* IMPROVEMENT: Updated signature verification procedure. Added new error codes.
* IMPROVEMENT: Provide identity information as a list.
* IMPROVEMENT: Function KSI_Signature_getSignerIdentity is deprecated. See KSI_Signature_getAggregationHashChainIdentity for replacement.
* BUGFIX: Corrected medadata request time parsing.
* BUGFIX: Validate list impl pointer before use.
* BUGFIX: Cryptoapi KSI_PKISignature_new fails if the input blob can not be parsed.
* BUGFIX: CryptoAPI uses PKCS7 signatures embedded intermediate certificates in verification process.
* IMPROVEMENT: Internally HTTP connections are reused and pipelined.
* IMPROVEMENT: Increased the size of the statically allocated KSI_Integer pool up to the value of 0xff.
* IMPROVEMENT: Removed experimental feature KSI_NetworkClient_performAll.
* IMPROVEMENT: Removed multi-signature support from the SDK.

Version 3.11

2016-11-03 release(3.11.1893)
* BUGFIX: Disabled cURL from using signals.
* IMPROVEMENT: Removed deprecated functions: KSI_TLV_setUintValue, KSI_TLV_fromUint, KSI_TLV_removeNestedTlv
* FEATURE: Added support for aggregation and extending PDU version 2.

Version 3.10

2016-10-18 release(3.10.1839)
* IMPROVEMENT: Refactored signature verification step attribute handling.
* IMPROVEMENT: Implemented KSI_BlockSigner getter for the hash value of the last leaf in the tree.
* BUGFIX: Fixed debian build.
* BUGFIX: Reference counting issues fixed.